# focustracer

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: FocusTracer_Sunum.pptx  FocusTracer_Teknik_Dokumantasyon.docx  ~$cusTracer_Teknik_Dokumantasyon.docx
output/: 20260412_231749_cli_sample_app.xml  20260412_232547_cli_sample_app.xml  20260412_232641_cli_sample_app.targets.json  20260412_232641_cli_sample_app.xml
src/focustracer/: README.md  README.tr.md  SUGGEST.md  __init__.py  __main__.py  cli.py
src/focustracer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/output/: 20260406_004729_test_hook_exceptions_detailed.xml  20260406_004729_test_hook_exceptions_detailed_1.xml  20260406_005420_test_hook_exceptions_normal.xml  20260406_005420_test_hook_exceptions_normal_1.xml  20260406_010356_test_hook_functions_normal.xml  20260406_010554_test_hook_functions_detailed.xml  20260406_011216_test_hook_functions_detailed.xml  20260408_161111_cli_sample_app.xml  20260409_142416_cli_sample_app.xml  20260409_142750_cli_sample_app.xml  20260410_014426_cli_sample_app.targets.json  20260410_014426_cli_sample_app.xml  20260411_154017_cli_sample_app.xml  20260411_154244_cli_sample_app.targets.json  (+6 more)
tests/: hook_examples.py  test_cli_install.py  test_hook_exceptions.py  test_hook_functions.py  test_hook_loops.py  test_hook_threading.py  test_loader.py  test_loop_compaction.py  test_xsd_validation.py
(+43 files in other folders)
